<resources>
    <string name="app_name">Rpi4</string>

    <!--SplashActivity-->
    <string name="settings">Vehicle Settings</string>

    <!--MainActivity-->
    <string name="hint_cycle">Cycle</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>

    <array name="settings">
        <item>Lights</item>
        <item>Interior</item>
    </array>

    <!--LightFragment-->
    <string name="light">Head Lamp</string>
    <string name="left_indicator">Left Indicator</string>
    <string name="right_indicator">Right Indicator</string>
    <string name="park">Park Light</string>
</resources>